# rift-pilot

./: .gitignore  README.md  config.yaml  pyproject.toml  rift_pilot.spec  setup.iss
scripts/: analyze_replay_position.py  build_installer.ps1  gen_champion_bases.py  inspect_recording.py  live_ai_coach.py  log_game.py  prototype_build_coach.py  test_ingame.py  validate_llm_coach.py
src/lol_coach/: __init__.py  __main__.py
src/lol_coach/application/: __init__.py  build_loader.py  coach_session.py  session_options.py
src/lol_coach/domain/: __init__.py
src/lol_coach/domain/detectors/: __init__.py  build_announcer.py  event_detector.py  minimap_reminder_detector.py  (+3 more)
src/lol_coach/infrastructure/: __init__.py  recommended_build_service.py
src/lol_coach/settings/: __init__.py  config_loader.py  constants.py  messages.py
src/rift_pilot/: __main__.py
src/rift_pilot/application/: __init__.py  build_loader.py  coach_session.py  player_stats_tracker.py  session_options.py  stats_bootstrap.py
src/rift_pilot/domain/: role_inference.py
src/rift_pilot/infrastructure/: recommended_build_service.py
src/rift_pilot/presentation/: __init__.py
src/rift_pilot/settings/: config_loader.py  constants.py  messages.py
tests/: conftest.py
tests/domain/: test_build_announcer.py  test_farm_detector.py  test_game_state_smite_detection.py  test_minimap_reminder_detector.py  test_next_item_detector.py  test_objective_detector.py  test_recommended_build_service.py  test_role_inference.py  test_skill_point_detector.py  test_state_diff.py  test_stats_estimator.py
(+75 files in other folders)
