[project]
name = "rift-pilot"
version = "0.1.0-beta"
description = "Rift Pilot — coach de voz em pt-BR para League of Legends."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "edge-tts>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rift-pilot = "lol_coach.presentation.gui.app:run_app"
rift-pilot-cli = "lol_coach.presentation.cli.cli_runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
